<resources>
    <string name="app_name">DP Partner 2.0</string>
    <string name="login">Login</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="err_password">Please Enter Password</string>
    <string name="err_Mobile">Please Enter UserName</string>
    <string name="error_something_wrong">Error Something went wrong</string>
    <string name="empty_result">No Data Found</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="custphn">Mobile :</string>
    <string name="alternate_no">Alt Mobile :</string>
    <string name="cust_email">Mail :</string>
    <string name="status">Status :</string>
    <string name="no_jobs_list">No Jobs Found</string>
    <string name="customer_name">Name :</string>
    <string name="update_appointment">Update Appointment</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="note">Note</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="update_delivery_status">Update Status</string>
    <string name="update_status">Status</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="note_list">View Notes</string>
    <string name="assign_agent">Assign Agent</string>
    <string name="assigned_to">Assigned To :</string>
    <string name="appt_time">Appt At :</string>
    <string name="please_wait">Please wait</string>
    <string name="pin_location">Pin Location</string>
    <string name="woops_something_went_wrong">Whoops Something Went Wrong!</string>
    <string name="fetching_location">Trying To Fetch Your Location</string>
    <string name="unable_to_identify">Unable to identify location?</string>
    <string name="please_try_again">Please try again.</string>
    <string name="please_provide_location_permission">Please Provide Location Permission</string>
    <string name="assign">Assign</string>
    <string name="re_assign">Re-Assign</string>
    <string name="area">Area :</string>
    <string name="upload_images">Payment Image</string>
    <string name="location">Location</string>
    <string name="pay_amount">Amount Collected</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="upload_delivered_image">Delivery Image</string>

    <string name="assigned_jobs">Assigned Jobs</string>
    <string name="in_progress_jobs">In-Progress Jobs</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="job_type">Job Type :</string>
    <string name="callbutton">Call</string>
    <string name="detailsbutton">Details</string>
    <string name="appt_date">Appt Date :</string>
    <string name="appmt_time">Appt Time :</string>
    <string name="pid">Purifier ID :</string>
    <string name="address">Address :</string>
    <string name="appointment_at">Appointment At :</string>
    <string name="job_description">Job Desc :</string>
    <string name="start_job">Start Job</string>
    <string name="appt_start_date">Appt Start Date :</string>
    <string name="appt_end_date">Appt End Date :</string>
    <string name="finish_job">Finish Job</string>
    <string name="job_id">Job ID :</string>
    <string name="add_note">Add Note</string>
    <string name="uploaded_photo">Photo Uploaded Successfully</string>
    <string name="activate">Activate</string>
    <string name="enter_customer_happy_code">Enter Customer Happy Code</string>
    <string name="happy_code">Happy Code</string>
    <string name="submit">Submit</string>
    <string name="output_tds">Output TDS</string>
    <string name="input_tds">Input TDS</string>
    <string name="add_parts">Add Parts</string>
    <string name="no_images_uploaded">No Images Uploaded</string>
    <string name="search_for_job_id_name">Search for Job Id/Name</string>
    <string name="time_out">TimeOut!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="jobs_list">Jobs</string>
    <string name="summary">Summary</string>
    <string name="copyright">&#169;DP Partner 2.0\u0020</string>
    <string name="plus_symbol">+ \u20B9</string>
    <string name="minus_symbol">- \u20B9</string>

    <string name="connecting_to_your_prime_device">Connecting to the Purifier…</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="new_version_available">New version available</string>
    <string name="update_app">Looks like you have an older version of the app. Please update to get latest features and best experience.</string>
    <string name="update_now">Update now</string>
    <string name="call_api_key">A1324103d8f7050d8dfba4986f0e15d47</string>
    <string name="call_method">dial.click2call</string>

    <string name="enable_gps"> Please Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="please_add_your_input">Please add your input</string>
    <string name="sync_now">Sync Now</string>

    <!--fcm-->
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="account">Account</string>
    <string name="inventory">Inventory</string>
    <string name="my_earnings">My Earnings</string>
    <string name="debit">Debit:</string>
    <string name="credit">Credit:</string>
    <string name="rs">\u20B9 </string>
    <string name="track_date">Track your progress from any date:</string>
    <string name="summary_text">This is your job summary. Seems like you are moving ahead like a King!</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="picked_up">Picked up -&#160;</string>
    <string name="to_be_pickup">To be picked up -&#160;</string>
    <string name="to_be_return">To be returned -&#160;</string>
    <string name="confirm_pick_up">Confirm Pick Up</string>
    <string name="complete_job">Complete Job</string>
    <string name="not_mentioned">Not mentioned</string>
    <string name="last_changed">Last Changed</string>
    <string name="spare_name">Name</string>
    <string name="color_code">Color Code :</string>

    //esp
    <string name="esptouch_message_permission">APP require Location permission to get Wi-Fi information. \nClick to request permission</string>
    <string name="esptouch_message_location">Please turn on GPS to get Wi-Fi information.</string>
    <string name="esptouch_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="esptouch_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>

    <string name="esptouch1_title">DrinkPrime</string>
    <string name="esptouch1_ssid_title">SSID: </string>
    <string name="esptouch1_bssid_title">BSSID: </string>
    <string name="esptouch1_password_title">Password: </string>
    <string name="esptouch1_device_count_title">Device count: </string>
    <string name="esptouch1_package_broadcast">Broadcast</string>
    <string name="esptouch1_package_multicast">Multicast</string>
    <string name="esptouch1_confirm">Confirm</string>
    <string name="esptouch1_wifi_5g_message">Device don\'t support 5G Wi-Fi, please make sure the currently connected Wi-Fi is 2.4G, or you can try multicast</string>
    <string name="esptouch1_location_permission_title">⚠️Warning</string>
    <string name="esptouch1_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="esptouch1_configuring_message">DrinkPrime is configuring, please wait for a moment…</string>
    <string name="esptouch1_configure_wifi_change_message">Wi-Fi disconnected or changed</string>
    <string name="esptouch1_configure_result_failed">DrinkPrime failed</string>
    <string name="esptouch1_configure_result_failed_port">Create DrinkPrime task failed, the DrinkPrime port could be used by other thread</string>
    <string name="esptouch1_configure_result_success">DrinkPrime Complete</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setup_wifi">Setup Wifi</string>
</resources>
