<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimens_30">

    <!--  <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/btn_close"
          android:layout_width="@dimen/dimens_35"
          android:layout_height="@dimen/dimens_35"
          android:layout_gravity="top|end"
          android:background="@drawable/btn_bg_close"
          android:src="@drawable/ic_error" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_5"
        android:layout_weight="1"
        android:fontFamily="@font/stolzl_regular"
        android:gravity="center"
        android:hint="@string/enter_customer_happy_code"
        android:padding="@dimen/dimens_10"
        android:textColorHint="@color/colorBlack"
        android:textSize="@dimen/dimens_12sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/output_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_5"
        android:layout_marginTop="@dimen/dimens_10"
        android:layout_weight="1"
        android:background="@drawable/bg_grey_border"
        android:ems="10"
        android:fontFamily="@font/stolzl_regular"
        android:gravity="center"
        android:hint="@string/happy_code"
        android:inputType="number"
        android:maxLength="6"
        android:padding="@dimen/dimens_10"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlackOverlay"
        android:textSize="@dimen/dimens_12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitotpbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_15"
        android:background="@drawable/btn_theme_bg"
        android:padding="@dimen/dimens_10"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/submit"
        android:textColor="#fff"
        android:textSize="@dimen/dimens_12sp" />

</LinearLayout>