<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DashboardCardViewStyle"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_close"
        android:layout_width="@dimen/dimens_25"
        android:layout_height="@dimen/dimens_25"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/minus_dimens_10"
        android:layout_marginBottom="@dimen/minus_dimens_60"
        android:src="@drawable/ic_error" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:padding="@dimen/dimens_10"
            android:text="@string/assign_agent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimens_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1"
            android:layout_marginStart="@dimen/dimens_20"
            android:layout_marginEnd="@dimen/dimens_20"
            android:background="@color/colorBlackOverlay" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dimens_20"
            android:layout_marginTop="@dimen/dimens_10">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_agent_name"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/dimens_5"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_15"
            android:layout_marginBottom="@dimen/dimens_15"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_agent_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20"
                android:layout_marginEnd="@dimen/dimens_20"
                android:background="@drawable/btn_grey_bg"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/reset"
                android:textColor="@color/colorWhite" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_agent_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_10"
                android:layout_marginEnd="@dimen/dimens_20"
                android:background="@drawable/btn_orange_bg"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/update"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>