<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

   <!-- <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_8"
        app:cardBackgroundColor="@color/cardview_light_background"
        map:cardElevation="@dimen/dimens_4">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/dimens_10"
            app:srcCompat="@drawable/ic_search"
            map:ignore="VectorDrawableCompat" />

    </androidx.cardview.widget.CardView>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimens_30"
            android:layout_height="@dimen/dimens_30"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/minus_dimens_10"
            app:srcCompat="@drawable/marker"
            map:ignore="VectorDrawableCompat" />
    </FrameLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/botom_carview"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="@dimen/dimens_5"
        android:layout_marginBottom="@dimen/dimens_5"
        app:backgroundTint="@color/colorWhite"
        app:srcCompat="@drawable/ic_location"
        map:ignore="VectorDrawableCompat" />


    <androidx.cardview.widget.CardView
        android:id="@+id/botom_carview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/cardview_light_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimens_10"
                android:text="@string/pin_location"
                android:textColor="@color/cardview_dark_background"
                android:textSize="@dimen/dimens_12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimens_10"
                android:text="@string/please_wait"
                android:textColor="@color/cardview_dark_background"
                android:textSize="@dimen/dimens_12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_use_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimens_10"
                android:background="@drawable/orange_border"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimens_12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>